Various fixes and updates